# INBLOODO-AGENT26

./: .env  .env.example  .gitignore  .vercelignore  AI_APIS_DISPLAY_GUIDE.md  APIs_QUICK_REFERENCE.md  ARCHIVED_PATH_ERROR_FIX.md  Blood_Report_AI_System_Architecture.pptx  CLOUD_DEPLOYMENT.md  COMPLETE_READY.md  COMPLETE_SYSTEM_GUIDE.md  COMPLETION_SUMMARY.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLATFORMS_GUIDE.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TRIGGER.txt  DEPLOY_NOW.bat  DEPLOY_NOW.md  DOCUMENTATION_MAP.md  Dockerfile  FAQ.md  FAST_START_GUIDE.md  FINAL_VERIFICATION_REPORT.md  GCLOUD_COMPLETE_DEPLOYMENT.md  GET_STARTED.md  GITHUB_ACTIONS_AUTO_DEPLOY.md  GOOGLE_CLOUD_RUN_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_MULTI_AI.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MULTI_AI.md  LATENCY_OPTIMIZATION_GUIDE.md  LOGIN_CREDENTIALS.md  MULTI_AI_COMPARISON_GUIDE.md  MULTI_AI_ENHANCEMENT_REPORT.md  MULTI_AI_IMPLEMENTATION_SUMMARY.md  MULTI_AI_INTEGRATION_GUIDE.md  MULTI_AI_QUICK_REFERENCE.md  (+107 more)
.github/workflows/: docker-test.yml  railway.yml  render.yml  vercel.yml
api/: index.py
mobile/: App.js  InbloodoApp.jsx  SETUP.md  package.json
src/: api_optimized.py  auth.py  main.py  optimization.py  performance.py
src/agent/: agent_orchestrator.py
src/analysis/: multi_ai_attribution.py
src/data_cleaning/: __init__.py  data_cleaner.py
src/database/: models.py
src/extraction/: csv_parameter_mapper.py  parameter_extractor.py
src/input_parser/: image_parser.py  pdf_parser.py
src/llm/: gemini_provider.py  mock_provider.py  multi_ai_comparison.py  multi_llm_service.py
src/models/: model_2_pattern_analysis.py
src/recommendation/: recommendation_generator.py
src/reporting/: optimized_pdf_processor.py  pdf_generator.py
templates/: index.html
tests/: test_api.py  test_crud.py
(+4 files in other folders)
