[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "blood-report-ai"
version = "1.0.0"
description = "AI-powered blood report analysis system with multi-LLM support"
authors = [{name = "INBLOODO", email = "contact@inbloodo.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pillow>=9.0.0",
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]

[project.scripts]
blood-report-ai = "main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
]

[tool.poetry]
name = "blood-report-ai"
version = "1.0.0"
description = "AI-powered blood report analysis system"

[tool.poetry.scripts]
blood-report-ai = "main:app"
