[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbloodo-agent"
version = "2.0.0"
description = "Advanced AI-powered blood report analysis system"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]

[tool.vercel]
framework = "fastapi"
app = "app:app"

[tool.vercel.env]
PYTHON_VERSION = "3.11"
